@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="TortoiseProc"
 	ProjectGUID="{50797F06-39C5-4802-8E2B-7B7A4EF03214}"
 	RootNamespace="TortoiseProc"
@@ -1566,10 +1566,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\copy.ico"
-				>
-			</File>
-			<File
 				RelativePath="..\Resources\CopyBackground.ico"
 				>
 			</File>
@@ -1579,6 +1575,18 @@
 			</File>
 			<File
 				RelativePath="..\Resources\DelunversionedBackground.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\Resources\depthemptyovl.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\Resources\depthfilesovl.ico"
+				>
+			</File>
+			<File
+				RelativePath="..\Resources\depthimmediatesovl.ico"
 				>
 			</File>
 			<File
@@ -1598,11 +1606,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\explorer.ico"
+				RelativePath="..\Resources\ExportBackground.ico"
 				>
 			</File>
 			<File
-				RelativePath="..\Resources\ExportBackground.ico"
+				RelativePath="..\Resources\externalovl.ico"
 				>
 			</File>
 			<File
@@ -1806,15 +1814,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\newfolder.ico"
+				RelativePath="..\resources\nestedovl.ico"
 				>
 			</File>
 			<File
 				RelativePath="..\Resources\newfolder.ico"
-				>
-			</File>
-			<File
-				RelativePath=".\open.ico"
 				>
 			</File>
 			<File
@@ -1839,10 +1843,6 @@
 			</File>
 			<File
 				RelativePath="..\Resources\refresh.ico"
-				>
-			</File>
-			<File
-				RelativePath=".\refresh.ico"
 				>
 			</File>
 			<File
@@ -1926,14 +1926,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\save.ico"
-				>
-			</File>
-			<File
-				RelativePath=".\saveas.ico"
-				>
-			</File>
-			<File
 				RelativePath="..\Resources\saveas.ico"
 				>
 			</File>
@@ -1943,10 +1935,6 @@
 			</File>
 			<File
 				RelativePath="..\Resources\search.avi"
-				>
-			</File>
-			<File
-				RelativePath="..\TortoiseBlame\small.ico"
 				>
 			</File>
 			<File
@@ -2011,10 +1999,6 @@
 			</File>
 			<File
 				RelativePath="..\Resources\UnlockBackground.ico"
-				>
-			</File>
-			<File
-				RelativePath=".\up.ico"
 				>
 			</File>
 			<File
